--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,7 @@ h1 {
 
 main {
     display: grid;
+    width: 100vw;
     margin: 2rem 2rem;
     grid-template-columns: repeat(4, 1fr);
     row-gap: 2rem;
