--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@
     --couleur-elektrik: yellow;
     --couleur-fée: pink;
     --couleur-psy: fuchsia;
+    --couleur-sol: darkgoldenrod;
 }
 
 header {
@@ -30,7 +31,7 @@ main {
     width: 100vw;
     margin: 2rem 2rem;
     grid-template-columns: repeat(4, 1fr);
-    row-gap: 2rem;
+    row-gap: 3rem;
 }
 
 .fiche {
@@ -41,6 +42,7 @@ main {
     width: 20vw;
     min-width: 200px;
     text-align: center;
+    position: relative;
 }
 
 .fiche>header {
@@ -57,6 +59,14 @@ main {
 .fiche:hover {
     scale: 1.1 1.1;
     box-shadow: 3px 3px black;
+}
+
+.legendaire::before {
+    content: url("masterball.svg");
+    transform: scale(0.5);
+    position: absolute;
+    top: -16%;
+    left: -18%;
 }
 
 /*---------------couleur-type--------------*/
@@ -84,6 +94,10 @@ main {
 
 .fiche:has(.psy) {
     background-color: var(--couleur-psy);
+}
+
+.fiche:has(.sol) {
+    background-color: var(--couleur-sol);
 }
 
 /*-----------------responsiveness------------------*/
